Events/Releases: Limit year/version `font-size` to prevent overflow.
Previous it would overflow below `385px`.

--- a/source/wp-content/themes/wporg-news-2021/sass/blocks/_wporg-event-year.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/blocks/_wporg-event-year.scss
@@ -1,6 +1,6 @@
 .wp-block-wporg-event-year {
 	font-family: var(--wp--preset--font-family--inter);
-	font-size: 160px;
+	font-size: min( 35vw, 160px );
 	font-weight: 200;
 	line-height: 1;
 	letter-spacing: -10px;
